<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">          Idée Repas </string>
    <string name="liste_repas">       Mes Repas          </string>
    <string name="meal">              Mon repas          </string>
    <string name="liste_menu">        Mon menu           </string>
    <string name="liste_course">      Ma liste de course </string>
    <string name="midi">               ○ Midi : </string>
    <string name="noon"> Midi </string>
    <string name="soir">               ○ Soir : </string>
    <string name="evening"> Soir </string>
    <string name="frequence">          ○ Fréquence :</string>
    <string name="empty_meals">       Vous n\'avez pas encore de repas, \n  Ajoutez en !</string>
    <string name="empty_meals2">      Il faut ajoutez des repas avant de pouvoir générer un menu !</string>
    <string name="empty_meals3">      Vous n\'avez pas assez de repas pour une génération de menu optimale </string>
    <string name="empty_meals4">      Il vous faut plus de repas pour générer un menu !</string>
    <string name="empty_ingredient">  Ce repas n\'a pas d\'ingredient.    </string>
    <string name="add_meal">          Ajouter un repas </string>
    <string name="add_ingredient">    Ajouter un ingredient  </string>
    <string name="add">               Ajouter          </string>
    <string name="add_picture">       Nouvelle image  </string>
    <string name="new_meal">          Nouveau repas    </string>
    <string name="new_ingredient">    Nouvel ingredient     </string>
    <string name="name_meal">         Nom du repas          </string>
    <string name="name_ingredient">   Nouvel ingredient     </string>
    <string name="meal_picture">      Photo du repas        </string>
    <string name="frequenceLabel">    Fréquence             </string>
    <string name="frequency_empty">   Inconnue </string>
    <string name="ingredients">       Liste des ingredients </string>
    <string name="popup_adding_meal">   Voulez-vous ajouter ce repas ? </string>
    <string name="popup_save_meal">     Enregistrer ? </string>
    <string name="popup_adding_menu">   Voulez-vous ajouter ce menu ?  </string>
    <string name="popup_deleting_meal"> Voulez-vous supprimer ce repas ? </string>
    <string name="popup_bad_igd">       Ce repas contient déjà cet ingredient.</string>
    <string name="popup_bad_meal_name"> Vous devez entrer un nom. </string>
    <string name="popup_bad_meal">      Vous disposez déjà d\'un repas portant ce nom. </string>
    <string name="ok">                OK          </string>
    <string name="cancel">            Annuler     </string>
    <string name="delete">            Supprimer   </string>
    <string name="generate">     Générer            </string>
    <string name="modif">         Modifier           </string>
    <string name="modif_picture"> Modifier l\'image  </string>
    <string name="save">          Enregistrer        </string>
    <string name="saves">         Repas enregistré"        </string>
    <string name="monday">     Lundi    </string>
    <string name="tuesday">    Mardi    </string>
    <string name="wednesday">  Mercredi </string>
    <string name="thursday">   Jeudi    </string>
    <string name="friday">     Vendredi </string>
    <string name="saturday">   Samedi   </string>
    <string name="sunday">     Dimanche </string>
    <string name="rarely">       Rarement          </string>
    <string name="occasionally"> Occasionnellement </string>
    <string name="regularly">    Régulièrement     </string>
    <string name="often">        Souvent           </string>
    <string name="dialog_title">   Continuer avec </string>
    <string name="dialog_gallery"> Galerie        </string>
    <string name="dialog_take_picture"> Prendre une photo </string>
    <string name="predefine">    ○ Prédéfinie :</string>
    <string name="personalize">  ○ Personnalisée : </string>

</resources>