<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/dark_ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_modif"
        android:icon="@drawable/dark_ic_action_camera"
        android:showAsAction="ifRoom"
        android:title="@string/modif"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/dark_ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/dark_ic_action_save"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>

</menu>