<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_back_meal"
        android:icon="@drawable/dark_ic_action_back"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/dark_ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/dark_ic_action_camera"
        android:showAsAction="ifRoom"
        android:title="@string/modif"/>
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/dark_ic_action_accept"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>

</menu>