<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/dateBackground"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_label"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/name_meal" />
        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/name_meal"
            android:inputType="textShortMessage"
            android:maxLength="100" />

        <LinearLayout
            android:id="@+id/picture_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/dateBackground"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/picture_label"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/meal_picture" />
        </LinearLayout>

        <ImageView
            android:id="@+id/picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/meal_picture"
            android:onClick="addPicture"
            android:src="@drawable/light_ic_unknow" />

        <LinearLayout
            android:id="@+id/frequency_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/dateBackground"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/frequency_label"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:text="@string/frequenceLabel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radioFrequence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp" >

                    <RadioButton
                        android:id="@+id/souvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/occasionnellement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/regulierement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="-55dp" >

                <ImageView
                    android:id="@+id/souventPicure"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/souvent" />

                <ImageView
                    android:id="@+id/occasionnellementPicure"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/occasionnellement" />

                <ImageView
                    android:id="@+id/regulierementPicure"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/regulierement" />

                <ImageView
                    android:id="@+id/rarementPicure"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/rarement" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/dateBackground"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ingredient"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/ingredients" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/newIngredient"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:hint="@string/new_ingredient"
                android:inputType="textPersonName"
                android:maxLength="100" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/new_ingredient"
                android:onClick="addIngredient"
                android:src="@drawable/light_ic_action_new" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>